Alembic Import does not apply MeshSequenceCache to all animated Meshes #81330

Closed
opened 2020-09-30 17:07:55 +02:00 by soruh · 13 comments

System Information
Operating system: Linux 4.19.0-10-amd64 #1 SMP Debian 4.19.132-1 (2020-07-24) x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GM107GL [Quadro K2200] (rev a2)

Blender Version
Broken: 2.90
Worked: N/A

Short description of error
I work with Alembic files which contain Meshes that may have constant geometry but varying vertex colors.
Importing an Alembic file containing such data only creates a MeshSequenceCache on the Meshes that have geometry changes.
The missing Meshes are created and their first Frame is imported. Manually adding MeshSequenceCache modifiers with the correct object-paths to them yields the expected result.

It seems to me like there is some optimization that prevents the creation of MeshSequenceCache modifiers on Meshes with constant geometry without considering if they have other animated properties.

Exact steps for others to reproduce the error

  • Import the attached Alembic file using the "Import->Alembic (.abc)" operator.
  • Observe that the correct Objects have been created but that the MeshSequenceCache modifier has only been applied to "Contour1"
    Optional:
  • Manually create a MeshSequenceCache modifier on one of the objects, add the alembic file as the source file and select the correct "Object Path" (The same as the name of the object).
  • Observe that the vertex colors on that object are now animated correctly.

t106c.abc

**System Information** Operating system: Linux 4.19.0-10-amd64 #1 SMP Debian 4.19.132-1 (2020-07-24) x86_64 GNU/Linux Graphics card: NVIDIA Corporation GM107GL [Quadro K2200] (rev a2) **Blender Version** Broken: 2.90 Worked: N/A **Short description of error** I work with Alembic files which contain Meshes that may have constant geometry but varying vertex colors. Importing an Alembic file containing such data only creates a `MeshSequenceCache` on the Meshes that have geometry changes. The missing Meshes are created and their first Frame is imported. Manually adding `MeshSequenceCache` modifiers with the correct object-paths to them yields the expected result. It seems to me like there is some optimization that prevents the creation of `MeshSequenceCache` modifiers on Meshes with constant geometry without considering if they have other animated properties. **Exact steps for others to reproduce the error** - Import the attached Alembic file using the "Import->Alembic (.abc)" operator. - Observe that the correct Objects have been created but that the `MeshSequenceCache` modifier has only been applied to "Contour1" Optional: - Manually create a `MeshSequenceCache` modifier on one of the objects, add the alembic file as the source file and select the correct "Object Path" (The same as the name of the object). - Observe that the vertex colors on that object are now animated correctly. [t106c.abc](https://archive.blender.org/developer/F8940547/t106c.abc)
Author

Added subscriber: @soruh

Added subscriber: @soruh
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-09-30 19:01:55 +02:00
Member

Can confirm, think I have a fix for this, modifiers are now created correctly.
It is a bit hard to test, since it seems colors are not really changing much in your file, do you have another [simpler] one -- like a cube with drastically changing colors :)? -- I'll try to create one as well...

Can confirm, think I have a fix for this, modifiers are now created correctly. It is a bit hard to test, since it seems colors are not really changing much in your file, do you have another [simpler] one -- like a cube with drastically changing colors :)? -- I'll try to create one as well...

This issue was referenced by 449e6124b5

This issue was referenced by 449e6124b5f75f91c52d231f763868ef4ddc5f1e
Member

@soruh: So at this point you could try D9057 (if you build yourself), or provide a super obvious test alembic, so I could check this is really working properly (since blender itself doesnt export animated vertex colors at all it seems).

@soruh: So at this point you could try [D9057](https://archive.blender.org/developer/D9057) (if you build yourself), or provide a super obvious test alembic, so I could check this is really working properly (since blender itself doesnt export animated vertex colors at all it seems).
Author

Thank you very much for the quick response!

I'll try this tomorrow when I'm back at work and will attempt to make a more minimal example. (If I can figure out how to use the Alembic library again, their docs are pretty minimal)

Thank you very much for the quick response! I'll try this tomorrow when I'm back at work and will attempt to make a more minimal example. (If I can figure out how to use the Alembic library again, their docs are pretty minimal)
Member

Note that the missing writing of animated vertex colors already has its own task in #51488 (Alembic export animated vertex color exports only first frame vertex color)

Note that the missing **writing** of **animated** vertex colors already has its own task in #51488 (Alembic export animated vertex color exports only first frame vertex color)
Author

Attached you will find two Alembic files which should be useful for testing.
I will now try compiling blender from source to confirm that the fix works for my use-case.

mesh_change.abc

static_mesh.abc

Attached you will find two Alembic files which should be useful for testing. I will now try compiling blender from source to confirm that the fix works for my use-case. [mesh_change.abc](https://archive.blender.org/developer/F8943351/mesh_change.abc) [static_mesh.abc](https://archive.blender.org/developer/F8943350/static_mesh.abc)
Member

Thx for these!

This is what I get with the patch (so I guess it is working):
#81330.webm

Thx for these! This is what I get with the patch (so I guess it is working): [#81330.webm](https://archive.blender.org/developer/F8943389/T81330.webm)
Author

Yes that seems correct. Thank you very much!

Yes that seems correct. Thank you very much!
Author

I have build blender with the patch and can confirm that it works with my data.

I have build blender with the patch and can confirm that it works with my data.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81330
No description provided.